--- a/Notes/Week3/week3.tex
+++ b/Notes/Week3/week3.tex
@@ -2,7 +2,7 @@
 
 \pagestyle{main}
 \renewcommand{\chaptermark}[1]{\markboth{\chaptername\ \thechapter\ (#1)}{}}
-\setcounter{chapter}{27}
+\setcounter{chapter}{2}
 
 \begin{document}
 
@@ -10,96 +10,6 @@
 
 
 \chapter{Rate Laws}
-\section{Definitions and Methods of Determination}
-\begin{itemize}
-    \item \marginnote{4/8:}Consider a general chemical equation
-    \begin{equation*}
-        \ce{\nu_AA + \nu_BB -> \nu_YY + \nu_ZZ}
-    \end{equation*}
-    \item The extent of the reaction via the progress variable $\xi$ is
-    \begin{align*}
-        n_A(t) &= n_A(0)-\nu_A\xi(t)&
-        n_Y(t) &= n_Y(0)+\nu_Y\xi(t)
-    \end{align*}
-    \item The rate of change (moles/second) is
-    \begin{align*}
-        \dv{n_A}{t} &= -\nu_A\dv{\xi}{t}&
-        \dv{n_Y}{t} &= \nu_Y\dv{\xi}{t}
-    \end{align*}
-    \item Deriving the rate of reaction for a gas-based chemical reaction.
-    \begin{itemize}
-        \item Time-dependent concentration changes
-        \begin{align*}
-            \frac{1}{V}\dv{n_A}{t} &= \dv{[A]}{t} = -\frac{\nu_A}{V}\dv{\xi}{t}&
-            \frac{1}{V}\dv{n_Y}{t} &= \dv{[Y]}{t} = -\frac{\nu_Y}{V}\dv{\xi}{t}
-        \end{align*}
-        \item The rate (or speed) of reaction, also known as the differential rate law, is
-        \begin{equation*}
-            v(t) = -\frac{1}{\nu_A}\dv{[A]}{t}
-            = -\frac{1}{\nu_B}\dv{[B]}{t}
-            = \frac{1}{\nu_Y}\dv{[Y]}{t}
-            = \frac{1}{\nu_Z}\dv{[Z]}{t}
-            = \frac{1}{V}\dv{\xi}{t}
-        \end{equation*}
-        \item All terms are positive.
-        \item Rate laws with a constant $k$ are of the form
-        \begin{equation*}
-            v(t) = k[A]^{m_A}[B]^{m_B}
-        \end{equation*}
-        \item The exponents are known as \textbf{orders}.
-        \item The overall order reaction is $\sum m_i$.
-        \item The orders and overall order of the reaction depends on the fundamental reaction steps and the reaction mechanism.
-    \end{itemize}
-    \item For example, for the reaction \ce{2NO_{(g)} + O2_{(g)} -> 2NO2_{(g)}}, we have
-    \begin{equation*}
-        v(t) = -\frac{1}{2}\dv{[\ce{NO}]}{t}
-        = -\dv{[\ce{O2}]}{t}
-        = -\frac{1}{2}\dv{[\ce{NO2}]}{t}
-    \end{equation*}
-    \begin{itemize}
-        \item It follows that $v(t)=k[\ce{NO}]^2[\ce{O2}]$.
-        \item This is a rare elementary reaction that proceeds with the kinetics illustrated by the equation.
-    \end{itemize}
-    \item Rate laws must be determined by experiment.
-    \begin{itemize}
-        \item Multi-step reactions may have more complex rate law expressions.
-        \item Oftentimes, $1/2$ exponents indicate more complicated mechanisms.
-        \item For example, even an equation as simple looking as \ce{H2 + Br2 -> 2HBr} has rate law
-        \begin{equation*}
-            v(t) = \frac{k'[\ce{H2}][\ce{Br2}]^{1/2}}{1+k''[\ce{HBr}][\ce{Br2}]^{-1}}
-        \end{equation*}
-    \end{itemize}
-    \item Determining rate laws.
-    \begin{itemize}
-        \item Method of isolation.
-        \begin{itemize}
-            \item Put in a large initial excess of $A$ so that it's concentration doesn't change that much; essentially incorporates $[A]^{m_A}$ into $k$ for determination of the order of $B$.
-            \item We can then do the same thing the other way around.
-        \end{itemize}
-        \item Method of initial rates.
-        \begin{itemize}
-            \item We approximate
-            \begin{equation*}
-                v = -\frac{\dd{[A]}}{\nu_A\dd{t}}
-                \approx -\frac{\Delta[A]}{\nu_A\Delta t}
-                = k[A]^{m_A}[B]^{m_B}
-            \end{equation*}
-            \item Consider two different initial values of $[B]$, which we'll call $[B_1],[B_2]$. Then
-            \begin{align*}
-                v_1 &= -\frac{1}{\nu_A}\left( \frac{\Delta[A]}{\Delta t} \right)_1 = k[A]_0^{m_A}[B]_1^{m_B}&
-                v_2 &= -\frac{1}{\nu_A}\left( \frac{\Delta[A]}{\Delta t} \right)_2 = k[A]_0^{m_A}[B]_2^{m_B}
-            \end{align*}
-            \item Take the logarithm and solve for $m_B$.
-            \begin{equation*}
-                m_B = \frac{\ln(v_1/v_2)}{\ln([B]_1/[B]_2)}
-            \end{equation*}
-        \end{itemize}
-    \end{itemize}
-    \item Does an example problem.
-\end{itemize}
-
-
-
 \section{Integrated Rate Laws}
 \begin{itemize}
     \item \marginnote{4/11:}First order reactions have exponential integrated rate laws.
@@ -508,217 +418,9 @@
 
 
 
-\section{TST and Overview of Mechanisms}
-\begin{itemize}
-    \item \marginnote{4/18:}More TST theory.
-    \begin{itemize}
-        \item We can intuitively rationalize concentration as $q/V$ by thinking of the partition function in some way giving some information about the number of particles. When we divide this by $V$, we thus get \emph{some} information about concentration.
-        \item $\delta$ is the finite window in which the activated complex is loosely defined to exist.
-        \item $\nu_c$ is the frequency of crossing the $\delta$ region in the energy diagram.
-        \item We substitute $[\ce{AB}^\ddagger]=[\ce{A}][\ce{B}]K_c^\ddagger/c^\circ$ from the equilibrium constant expression.
-        \item The translational partition function plays a role. Note that $m^\ddagger$ is the mass of the activated complex.
-        \begin{equation*}
-            q_\text{trans} = \frac{\sqrt{2\pi m^\ddagger\kB T}}{h}\delta
-        \end{equation*}
-        \begin{itemize}
-            \item Dimensional analysis (as an analysis of units to help appreciate the term): $\kB T$ is energy ($E\propto mv^2/2$) and $m^\ddagger$ is mass, so their product is momentum squared ($p^2\propto mv^2$).
-            \item Thus, the top of the expression gives momentum, and $h/\delta$ also gives momentum.
-            \item Remember that the momentum is rather like that of the particle in a box.
-        \end{itemize}
-        \item We have that
-        \begin{equation*}
-            q^\ddagger = q_\text{trans}^\ddagger\cdot q_\text{rot}^\ddagger
-        \end{equation*}
-        where $q^\ddagger$ is the partition function for the whole species, which we can split.
-        \item This permits
-        \begin{align*}
-            K_c^\ddagger &= \frac{(q^\ddagger/V)c^\circ}{(q_{\ce{A}}/V)(q_{\ce{B}}/V)}\\
-            &= \frac{\sqrt{2\pi m^\ddagger\kB T}}{h}\delta\frac{(q_\text{int}^\ddagger/V)c^\circ}{(q_{\ce{A}}/V)(q_{\ce{B}}/V)}
-        \end{align*}
-        and the following
-        \begin{equation*}
-            k = \nu_c\frac{\sqrt{2\pi m^\ddagger\kB T}}{hc^\circ}\delta\frac{(q_\text{int}^\ddagger/V)c^\circ}{(q_{\ce{A}}/V)(q_{\ce{B}}/V)}
-        \end{equation*}
-        \item We now define the speed of the activated complex crossing the barrier top (gas collision). This is $\prb{u_\text{ac}}$, where $\prb{u_\text{ac}}=\nu_c\delta$ (the frequency $x$ distance).
-        \item We have that
-        \begin{equation*}
-            \prb{u_\text{ac}} = \int_0^\infty uf(u)\dd{u}
-            = \sqrt{\frac{m^\ddagger}{2\pi\kB T}}\int_0^\infty u\e[-m^\ddagger u^2/2\kB T]\dd{u}
-            = \sqrt{\frac{\kB T}{2\pi m^\ddagger}}
-        \end{equation*}
-        and the following
-        \begin{equation*}
-            k = \frac{\kB T}{hc^\circ}\frac{(q_\text{int}^\ddagger/V)c^\circ}{(q_{\ce{A}}/V)(q_{\ce{B}}/V)}
-            = \frac{\kB T}{hc^\circ}K^\ddagger
-        \end{equation*}
-        \begin{itemize}
-            \item We start at zero instead of $-\infty$ because we're only considering the forward direction of the reaction. If we did $-\infty$, we'd be accounting for the reverse reaction as well.
-        \end{itemize}
-        \item Introducing $\Delta^\ddagger G^\circ=-RT\ln K^\ddagger=\Delta^\ddagger H^\circ-T\Delta^\ddagger S^\circ$ yields the \textbf{Eyring equation}
-        \begin{equation*}
-            k(T) = \frac{\kB T}{hc^\circ}\e[-\Delta^\ddagger G^\circ/RT]
-            = \frac{\kB T}{hc^\circ}\e[\Delta^\ddagger S^\circ/R]\e[-\Delta^\ddagger H^\circ/RT]
-        \end{equation*}
-        \item We can relate the Eyring equation to the Arrhenius equation by differentiating the logarithm.
-        \begin{align*}
-            \dv{\ln k}{T} &= \frac{1}{T}+\dv{\ln K^\ddagger}{T}&
-            \dv{\ln K_c}{T} &= \frac{\Delta U^\circ}{RT^2}
-        \end{align*}
-        gives
-        \begin{equation*}
-            \dv{\ln k}{T} = \frac{1}{T}+\frac{\Delta^\ddagger U^\circ}{RT^2}
-        \end{equation*}
-        \item This all serves to relate thermodynamics and kinetics.
-        \item Additionally, since $\Delta^\ddagger H^\circ=\Delta^\ddagger U^\circ+\Delta^\ddagger PV=\Delta^\ddagger U^\circ+\Delta^\ddagger nRT$, we have that
-        \begin{equation*}
-            \dv{\ln k}{T} = \frac{\Delta^\ddagger H^\circ+2RT}{RT^2}
-        \end{equation*}
-        \begin{itemize}
-            \item Note that $\Delta n=-1$ for bimolecular gas phase reactions.
-            \item $\Delta(PV)^\ddagger$ is the difference in the number of moles of gaseous products and reactants.
-            \item $\Delta n^\ddagger=0$: Unimolecular.
-            \item $\Delta n^\ddagger=-1$: Bimolecular.
-            \item $\Delta n^\ddagger=-2$: Trimolecular.
-        \end{itemize}
-        \item Comparing with the Arrhenius $\dv*{\ln k}{T}=E_a/RT^2$ gives
-        \begin{equation*}
-            E_a = \Delta^\ddagger H^\circ+2RT
-        \end{equation*}
-        \item Substituting into the Eyring equation yields
-        \begin{equation*}
-            k(T) = \frac{\e[2]\kB T}{hc^\circ}\e[\Delta^\ddagger S^\circ/R]\e[-E_a/RT]
-        \end{equation*}
-        \item Gas, uni: $E_a=\Delta H^\ddagger+RT$, $A=\e\kB T/h\cdot\e[\Delta S^\ddagger/R]$.
-        \item Gas, bi: $E_a=\Delta H^\ddagger+2RT$, $A=\e[2]\kB T/hc^\circ\cdot\e[\Delta S^\ddagger/R]$.
-        \item Gas, tri: $E_a=\Delta H^\ddagger+3RT$, $A=\e[3]\kB T/h(c^\circ)^2\cdot\e[\Delta S^\ddagger/R]$.
-    \end{itemize}
-    \item Important things to memorize from TST.
-    \begin{itemize}
-        \item The Eyring equation.
-        \item Don't worry about the partition function mathematics, but understand the dimensional analysis.
-        \begin{itemize}
-            \item Know that we collapse two $\kB T$ terms together; one from $q_\text{trans}$ and one from $\prb{u_\text{ac}}$.
-        \end{itemize}
-    \end{itemize}
-    \item Consider cyclohexane conformations.
-    \begin{itemize}
-        \item We have that
-        \begin{align*}
-            \Delta^\ddagger H^\circ &= \SI{31.38}{\kilo\joule\per\mole}&
-            \Delta^\ddagger S^\circ &= \SI{16.74}{\joule\per\mole\per\kelvin}&
-            T &= \SI{325}{\kelvin}
-        \end{align*}
-        \item We want to know $\Delta^\ddagger G^\circ$.
-        \item But by the definition of the Gibbs energy,
-        \begin{equation*}
-            \Delta^\ddagger G^\circ = \Delta^\ddagger H^\circ-T\Delta^\ddagger S^\circ
-            = \SI{25.94}{\kilo\joule\per\mole}
-        \end{equation*}
-        \item It follows that
-        \begin{equation*}
-            k = \frac{\kB T}{h}\e[-\Delta^\ddagger G^\circ/RT]
-            = \SI{4.59e8}{\per\second}
-        \end{equation*}
-    \end{itemize}
-\end{itemize}
-
-
-
 \section{Chapter 28: Chemical Kinetics I --- Rate Laws}
+\emph{From \textcite{bib:McQuarrieSimon}.}
 \begin{itemize}
-    \item Whereas \textcite{bib:McQuarrieSimon} developed Quantum Mechanics from a set of simple postulates and Thermodynamics from the three laws, "the field of chemical kinetics has not yet matured to a point where a set of unifying principles has been identified" \parencite[1047]{bib:McQuarrieSimon}.
-    \begin{itemize}
-        \item There are many current theoretical models of kinetics, each of which has its merits and drawbacks.
-        \item Thus, right now, it is necessary to familiarize ourselves with numerous disparate ideas, as is common in developing fields of inquiry.
-    \end{itemize}
-    \item \textbf{Rate law}: A differential equation describing the time-dependence of the reactant and product concentrations during a chemical reaction.
-    \item Consider the general chemical reaction described by
-    \begin{equation*}
-        \ce{$\nu_{\text{A}}$A + $\nu_{\text{B}}$B -> $\nu_{\text{Y}}$Y + $\nu_{\text{Z}}$Z}
-    \end{equation*}
-    \item Since
-    \begin{align*}
-        n_{\ce{A}}(t) &= n_{\ce{A}}(0)-\nu_{\ce{A}}\xi(t)&
-        n_{\ce{B}}(t) &= n_{\ce{B}}(0)-\nu_{\ce{B}}\xi(t)&
-        n_{\ce{Y}}(t) &= n_{\ce{Y}}(0)+\nu_{\ce{Y}}\xi(t)&
-        n_{\ce{Z}}(t) &= n_{\ce{Z}}(0)+\nu_{\ce{Z}}\xi(t)
-    \end{align*}
-    we can describe the time-dependent change in the number of moles of each substance by taking a derivative with respect to $t$, as follows.
-    \begin{align*}
-        \dv{n_{\ce{A}}}{t} &= -\nu_{\ce{A}}\dv{\xi}{t}&
-        \dv{n_{\ce{B}}}{t} &= -\nu_{\ce{B}}\dv{\xi}{t}&
-        \dv{n_{\ce{Y}}}{t} &= \nu_{\ce{Y}}\dv{\xi}{t}&
-        \dv{n_{\ce{Z}}}{t} &= \nu_{\ce{Z}}\dv{\xi}{t}
-    \end{align*}
-    \item Since most experimental techniques measure concentration, it is convenient to divide the above equations by the total volume $V$ on both sides to yield the following.
-    \begin{align*}
-        \dv{[\ce{A}]}{t} &= -\frac{\nu_{\ce{A}}}{V}\dv{\xi}{t}&
-        \dv{[\ce{B}]}{t} &= -\frac{\nu_{\ce{B}}}{V}\dv{\xi}{t}&
-        \dv{[\ce{Y}]}{t} &= \frac{\nu_{\ce{Y}}}{V}\dv{\xi}{t}&
-        \dv{[\ce{Z}]}{t} &= \frac{\nu_{\ce{Z}}}{V}\dv{\xi}{t}
-    \end{align*}
-    \item While each individual quantity above has its purpose, it is useful to define an overall \textbf{rate of reaction}.
-    \item \textbf{Rate of reaction}: The following quantity. \emph{Denoted by} $\bm{v(t)}$. \emph{Given by}
-    \begin{align*}
-        v(t) &= \frac{1}{V}\dv{\xi}{t}\\
-        &= -\frac{1}{\nu_A}\dv{[A]}{t}
-            = -\frac{1}{\nu_B}\dv{[B]}{t}
-            = \frac{1}{\nu_Y}\dv{[Y]}{t}
-            = \frac{1}{\nu_Z}\dv{[Z]}{t}
-    \end{align*}
-    \begin{itemize}
-        \item Note that the rate of reaction is always positive (as long as the reaction proceeds only in the forward direction).
-    \end{itemize}
-    \item \textbf{Rate law}: The relationship between $v(t)$ and the concentrations of the various reactants. \emph{General form}
-    \begin{equation*}
-        v(t) = k[\ce{A}]^{m_{\ce{A}}}[\ce{B}]^{m_{\ce{B}}}\cdots
-    \end{equation*}
-    \begin{itemize}
-        \item Some reactions (such as the \ce{H2 + Br2 -> 2HBR} example from class) do not have conventional rate laws.
-    \end{itemize}
-    \item \textbf{Rate constant}: The proportionality constant between the rate of reaction and the function of the concentrations of the chemical species involved in a rate law. \emph{Denoted by} $\bm{k}$.
-    \begin{itemize}
-        \item The units of the rate constant depend on the form of the rate law.
-    \end{itemize}
-    \item \textbf{Order} (of a reactant \ce{A}): The power to which the concentration of a reactant is raised in a rate law. \emph{Denoted by} $\bm{m_{\ce{A}}}$.
-    \item \textbf{Overall order} (of a chemical reaction that obeys a general-form rate law): The sum of the orders of the reactants.
-    \item We now discuss common methods for the experimental determination of a rate law.
-    \item \textbf{Method of isolation}: The following procedure, which as described will determine $m_{\ce{B}}$ for a chemical reaction of the form introduced at the beginning of this section but can easily be adapted to determine $m_{\ce{A}}$ or be generalized to higher-order situations.
-    \begin{enumerate}
-        \item Introduce a large excess concentration of \ce{A} into the initial reaction mixture. This excess will guarantee that $[\ce{A}]$ remains essentially constant over the course of the reaction.
-        \item Combine $[\ce{A}]^{m_{\ce{A}}}$ and $k$ into a new "rate constant" $k'$, reducing the rate law to the form
-        \begin{equation*}
-            v = k'[\ce{B}]^{m_{\ce{B}}}
-        \end{equation*}
-        \item Determine $m_{\ce{B}}$ by measuring $v$ as a function of $[\ce{B}]$.
-    \end{enumerate}
-    \item Sometimes it is not possible to have one reactant or the other in excess.
-    \begin{itemize}
-        \item As such, we need an alternate way to measure the rate.
-        \item We cannot directly measure $\dv*{[\ce{A}]}{t}$, but we can measure $\Delta[\ce{A}]/\Delta t$ for small $\Delta t$ and approximate these measurements as $\dv*{[\ce{A}]}{t}$.
-        \item This forms the basis for the \textbf{method of initial rates}.
-    \end{itemize}
-    \item \textbf{Method of initial rates}: The following procedure, which as described will determine $m_{\ce{B}}$ for a chemical reaction of the form introduced at the beginning of this section but can easily be adapted to determine $m_{\ce{A}}$ or be generalized to higher-order situations.
-    \begin{enumerate}
-        \item Take two different measurements of the initial rate (from $t=0$ to $t=t$). Let the initial concentration of \ce{A}, $[\ce{A}]_0$, be the same for each. However, for one, use $[\ce{B}]_1$ for initial concentration of \ce{B}, and for the other, use $[\ce{B}]_2$.
-        \item Arranging everything into equations, we thus have
-        \begin{align*}
-            v_1 &= -\frac{1}{\nu_{\ce{A}}}\left( \frac{\Delta[\ce{A}]}{\Delta t} \right)_1
-            = k[\ce{A}]_0^{m_{\ce{A}}}[\ce{B}]_1^{m_{\ce{B}}}&
-            v_2 &= -\frac{1}{\nu_{\ce{A}}}\left( \frac{\Delta[\ce{A}]}{\Delta t} \right)_2
-            = k[\ce{A}]_0^{m_{\ce{A}}}[\ce{B}]_2^{m_{\ce{B}}}
-        \end{align*}
-        where we have used the subscripts 1 and 2 to denote the results of the different experiments and their corresponding initial concentrations of \ce{B}.
-        \item We may now solve for $m_{\ce{B}}$ by dividing the two equations, taking logarithms, and rearranging to the following.
-        \begin{equation*}
-            m_{\ce{B}} = \frac{\ln(v_1/v_2)}{\ln([\ce{B}]_1/[\ce{B}]_2)}
-        \end{equation*}
-    \end{enumerate}
-    \item Both the method of isolation and the method of initial rates rely on the assumption that the reactants can be mixed, and then we can measure the rates.
-    \begin{itemize}
-        \item However, for some very quick reactions, the time required to mix the reactants is long compared with the reaction itself.
-        \item For these cases, we need \textbf{relaxation methods}.
-    \end{itemize}
     \item \marginnote{4/17:}\textcite{bib:McQuarrieSimon} derives the first-order integrated rate law.
     \item To determine the rate constant of a first-order reaction from concentration vs. time data, plot the log of the concentration vs. time and perform a linear regression.
     \item \textbf{Half-life}: The length of time required for half of the reactant to disappear. \emph{Denoted by} $\bm{t_{1/2}}$.
