--- a/Notes/notes.tex
+++ b/Notes/notes.tex
@@ -2,6 +2,9 @@
 
 \input{../preamble.tex}
 
+\renewcommand{\contentsname}{Weeks}
+\renewcommand{\chaptername}{Week}
+
 \title{CHEM 26300 (Chemical Kinetics and Dynamics) Notes}
 \author{Steven Labalme}
 
@@ -25,12 +28,15 @@
 \pagenumbering{arabic}
 \pagestyle{main}
 \renewcommand{\chaptermark}[1]{\markboth{\chaptername\ \thechapter\ (#1)}{}}
-\setcounter{chapter}{26}
-\subfile{Chapter27/Chapter27.tex}
+\subfile{Week1/week1.tex}
 
-\subfile{Chapter28/Chapter28.tex}
+\subfile{Week2/week2.tex}
 
-\subfile{Chapter29/Chapter29.tex}
+\subfile{Week3/week3.tex}
+
+\subfile{Week4/week4.tex}
+
+\subfile{Week5/week5.tex}
 
 \printbibliography[heading=bibintoc]
 
