--- a/preamble.tex
+++ b/preamble.tex
@@ -5,6 +5,7 @@
 \usepackage{enumitem}
 \usepackage{scrextend}
 \usepackage[bottom]{footmisc}
+\usepackage{xr}
 \usepackage{siunitx}
 \usepackage[style=apa]{biblatex}
 \usepackage{booktabs}
@@ -36,6 +37,8 @@
 
 \deffootnotemark{\textsuperscript{\textup{[}\thefootnotemark\textup{]}}}
 \deffootnote[2.1em]{0em}{0em}{\textsuperscript{\thefootnote}}
+
+\externaldocument{notes}
 
 \DeclareSIUnit{\angstrom}{\textup{\AA}}
 
